--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ div{
 
 input{
     font-size: 48px;
-    background-color: fuchsia;
+    background-color:whitesmoke;
     border: none;
     outline: none;
     text-align: right;
@@ -41,6 +41,7 @@ button{
     margin: 7px;
     border-radius: 50px;
     cursor: pointer;
+    background-color:ivory;
 }
 
 button:hover{
